fixed card and nav z-index

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -17,6 +17,7 @@ a {
   width: 100%;
   height: $navbar-height;
   top: 0;
+  z-index: 1;
 }
 
 .navbar-margin {
@@ -29,7 +30,8 @@ a {
 }
 
 .dont-overlap {
-  z-index: -1;
+  position: inherit;
+  z-index: 0;
 }
 
 .phil {
